--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,18 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <!--development version, includes helpful console warnings -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="App.js"></script>
 
     <!-- The above 2 meta tags *must* come first in the head; any other head content must
     come *after* these tags -->
     <title>Video Sharing Platform</title>
   </head>
   <body>
-<div class="container">
+<div id="app" class="container">
     <button class="btn btn-primary col-lg-1">Ahoy</button>
+    <h1>{{description + ' ' + product}}</h1>
 </div>
 </body>
 </html>
