--- a/client/index.html
+++ b/client/index.html
@@ -3,21 +3,35 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <!--development version, includes helpful console warnings -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="App.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="App.js"></script>
+  <link rel="stylesheet" href="App.css"/>
 
     <!-- The above 2 meta tags *must* come first in the head; any other head content must
     come *after* these tags -->
     <title>Video Sharing Platform</title>
   </head>
   <body>
-<div id="app" class="container">
-    <button class="btn btn-primary col-lg-1">Ahoy</button>
-    <h1>{{description + ' ' + product}}</h1>
-</div>
-</body>
+    <div class="container-fluid" id="app">
+      <div class="jumbotron jumbotron-fluid text-center">
+        <h1>Splendid Video Sharing Platform.<sup><small>TM</small></sup></sup></h1>
+        <p><em>Upload your own video!</em></p>
+      <div v-if="!authenticated" class="form-group text-center">
+        <input class="col-4 mx-auto form-control" type="text" name="username" v-model="input.username" placeholder="Username" />
+        <input class="col-4 mx-auto form-control" type="password" name="password" v-model="input.password" placeholder="Password" />
+        <button class="col-4 btn btn-outline-success" type="button" v-on:click="login()">Login</button>
+      </div>
+      <div v-else class="text-center">
+        <button type="button" class="btn btn-outline-danger" v-on:click="logout()">Logout</button>
+        <button type="button" class="btn btn-outline-primary" v-on:click="fetchSchools()">List schools</button>
+      </div>
+    </div>
+    
+  </body>
+  
 </html>
