--- a/server/static/index.html
+++ b/server/static/index.html
@@ -308,6 +308,7 @@
         </div>
         <div v-else class="text-center">
           <button type="button" class="btn btn-outline-danger" v-on:click="logout()">Logout</button>
+          <hr>
           <form id="searchUser_form" class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search User..." v-model="searchedUsername" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" v-on:click="searchUserWithName()">Go!</button>
@@ -316,7 +317,6 @@
             The user does not exist. Try again?
           </div>
           <div v-if="showSearchUser" id="usercard" class="d-flex w-100">
-            
             <div class="card" style="width: 28rem;">
               <div class="card-body">
                 <h5 class="card-title"><b>{{searchedUser.Name}}</b></h5>
@@ -331,6 +331,7 @@
               </div>
             </div>
           </div>
+          <hr>
           
           <div class="addvideo_videolist">
             <button class="col-4 btn btn-primary" type="button" v-on:click="gonnaaddvideo()">Add Video!</button>
@@ -351,7 +352,21 @@
               </div>
             </div>
             <div v-if="isAddVideoList">
-
+              <div class="form-group">
+                <label for="videoListTitle">Email address</label>
+                <input class="col-4 mx-auto form-control" id="videoListTitle" type="text" name="title" v-model="videoListInput.title" placeholder="title.." />
+              </div>
+              <div class="form-group">
+                <label for="videoListDesc">Example textarea</label>
+                <textarea class="col-4 mx-auto form-control" id="videoListDesc" v-model="videoListInput.description" rows="3"></textarea>
+                <button id="addVideo" class="col-1 btn btn-success" type="button" v-on:click="addVideoList()">Create!</button>
+                <div v-if="videoListAddedSuccess" class="alert alert-success" role="alert">
+                  You've successfully created your video list!
+                </div>
+                <div v-if="videoListAddedFail" class="alert alert-danger" role="alert">
+                  Something goes wrong.
+                </div>
+              </div>
             </div>
           </div>
         </div>
