--- a/server/static/index.html
+++ b/server/static/index.html
@@ -374,12 +374,27 @@
           <hr>
           <div>
             <button id="ownVideo" class="col-4 btn btn-primary" type="button" v-on:click="showVideo()">Video</button>
-            <button class="col-4 btn btn-secondary" type="button" >VideoList</button>
+            <button class="col-4 btn btn-secondary" type="button" v-on:click="showVideoList()">VideoList</button>
             <div v-if="noVideo" class="alert alert-warning" role="alert">
               You don't have any video.
             </div>
             <div v-if="showOwnVideos" v-for="video in videos">
               <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" v-bind:src="'https://www.youtube.com/embed/'+ video.id + '?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=http://youtubeembedcode.com'"></iframe>
+            </div>
+            <div v-if="showOwnVideoLists" v-for="videolist in videolists">
+              <div class="card col-6">
+                <div class="card-header">
+                  {{videolist.id}}
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">{{videolist.name}}</h5>
+                  <p class="card-text">{{videolist.description}}</p>
+                  <a href="#" class="btn btn-primary">Check Videos</a>
+                </div>
+              </div>
+              <div v-if="noVideoList" class="alert alert-warning" role="alert">
+                You don't have any videolist.
+              </div>
             </div>
           </div>
         </div>
