--- a/server/static/index.html
+++ b/server/static/index.html
@@ -27,6 +27,39 @@
         <button class="col-2 btn btn-warning header-btn" type="button" v-on:click="signupbtn()">Sign Up</button>
       </div>
       <div v-else class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand">Video.</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" v-on:click="showVideo()">Your Video<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" v-on:click="showVideoList()">Your VideoList</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Add
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" v-on:click="gonnaaddvideo()">Video</a>
+                  <a class="dropdown-item" v-on:click="gonnaaddvideolist()">VideoList</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#">Fart</a>
+              </li>
+            </ul>
+            <form id="searchUser_form" class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search User..." v-model="searchedUsername" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit" v-on:click="searchUserWithName()">Go!</button>
+            </form>
+          </div>
+        </nav>
         <button type="button" class="col-2 btn btn-danger header-btn" v-on:click="logout()">Logout</button>
       </div>
       <div class="jumbotron jumbotron-fluid text-center">
@@ -310,16 +343,11 @@
           </div>
         </div>
         <div v-else class="text-center">
-          <hr>
-          <form id="searchUser_form" class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search User..." v-model="searchedUsername" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" v-on:click="searchUserWithName()">Go!</button>
-          </form>
           <div v-if="searchUserAlert" class="alert alert-danger" role="alert">
             The user does not exist. Try again?
           </div>
           <div v-if="showSearchUser" id="usercard" class="d-flex w-100">
-            <div class="card" style="width: 28rem;">
+            <div class="card" style="width: 48rem;">
               <div class="card-body">
                 <h5 class="card-title"><b>{{searchedUser.Name}}</b></h5>
               </div>
@@ -347,11 +375,8 @@
               </div>
             </div>
           </div>
-          <hr>
           
           <div class="addvideo_videolist">
-            <button class="col-4 btn btn-primary" type="button" v-on:click="gonnaaddvideo()">Add Video!</button>
-            <button class="col-4 btn btn-secondary" type="button" v-on:click="gonnaaddvideolist()">Add VideoList.</button>
             <div v-if="isAddVideo">
               <span>YouTube Video Id:</span>
               <input class="col-4 mx-auto form-control" type="text" name="ytbId" v-model="ytbId" />
@@ -386,30 +411,31 @@
             </div>
           </div>
 
-          <hr>
           <div>
-            <button id="ownVideo" class="col-4 btn btn-primary" type="button" v-on:click="showVideo()">Video</button>
-            <button class="col-4 btn btn-secondary" type="button" v-on:click="showVideoList()">VideoList</button>
             <div v-if="noVideo" class="alert alert-warning" role="alert">
               You don't have any video.
             </div>
             <div v-if="showOwnVideos" v-for="video in videos">
-              <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" v-bind:src="'https://www.youtube.com/embed/'+ video.id + '?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=http://youtubeembedcode.com'"></iframe>
+              <p>{{video.id}}</p>
+              <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" allow="fullscreen" v-bind:src="'https://www.youtube.com/embed/'+ video.id + '?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=http://youtubeembedcode.com'"></iframe>
             </div>
             <div v-if="showOwnVideoLists" v-for="videolist in videolists">
-              <div class="card col-6">
+              <div class="card col-10">
                 <div class="card-header">
                   {{videolist.id}}
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">{{videolist.name}}</h5>
                   <p class="card-text">{{videolist.description}}</p>
-                  <a href="#" class="btn btn-primary">Check Videos</a>
+                  <a><i class="fa-solid fa-circle-plus"></i></a>
+                  <button type="button" class="btn btn-outline-info" v-on:click="addVideoToVideoList(videolist.id)">+</button>
+
+                  <button class="btn btn-primary">Check Videos</button>
                 </div>
               </div>
-              <div v-if="noVideoList" class="alert alert-warning" role="alert">
-                You don't have any videolist.
-              </div>
+            </div>
+            <div v-if="noVideoList" class="alert alert-warning" role="alert">
+              You don't have any videolist.
             </div>
           </div>
         </div>
