#15 fixed some bugs; did check videos in videolist functionality

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -366,7 +366,13 @@
                     <div class="card-body">
                       <h5 class="card-title">{{videolist.name}}</h5>
                       <p class="card-text">{{videolist.description}}</p>
-                      <a href="#" class="btn btn-primary">Check Videos</a>
+                      <button class="btn btn-primary" v-on:click="showVideoInVideoList_Other(videolist.id)">Check Videos</button>
+                    </div>
+                    <div v-if="showVideoInOtherVideoList === true && selectedOtherVideoListId === videolist.id" v-for="video in videoInOtherVideoLists">
+                      <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="688.54" height="443" type="text/html" allow="fullscreen" v-bind:src="'https://www.youtube.com/embed/'+ video.videoId + '?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=http://youtubeembedcode.com'"></iframe>
+                    </div>
+                    <div v-if="showVideoInOtherVideoListFail ===true && selectedOtherVideoListId === videolist.id" class="alert alert-danger" role="alert">
+                      There is no video in this videolist
                     </div>
                   </div>
                 </div>
@@ -437,13 +443,19 @@
                     <input class="video-adding col-2 form-control" type="text" name="videoId_addToList" v-model="videoId_addToList" />
                     <button type="button" class="video-adding btn btn-outline-info" v-on:click="addVideoToVideoList(videolist.id)">+</button>
                   </div>
-                  <button class="col-6 btn btn-primary">Check Videos it has!</button>
-                  <div v-if="videoListVideoAddedSuccess" class="alert alert-success" role="alert">
+                  <button class="col-6 btn btn-primary" v-on:click="showVideoInVideoList(videolist.id)">Check Videos it has!</button>
+                  <div v-if="videoListVideoAddedSuccess && selectedVideoListId === videolist.id" class="alert alert-success" role="alert">
                     Success!
                   </div>
                   <div v-if="videoListVideoAddedFail" class="alert alert-danger" role="alert">
                     Check your video Id, please...
                   </div>
+                </div>
+                <div v-if="showVideoInOwnVideoList === true && selectedVideoListId === videolist.id" v-for="video in videoInVideoLists">
+                  <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" allow="fullscreen" v-bind:src="'https://www.youtube.com/embed/'+ video.videoId + '?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=http://youtubeembedcode.com'"></iframe>
+                </div>
+                <div v-if="showVideoInOwnVideoListFail === true && selectedVideoListId === videolist.id" class="alert alert-danger" role="alert">
+                  There is no video in this videolist
                 </div>
               </div>
             </div>
