--- a/server/static/index.html
+++ b/server/static/index.html
@@ -428,6 +428,7 @@
             <div v-if="showOwnVideos" v-for="video in videos">
               <p>{{video.id}}</p>
               <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" allow="fullscreen" v-bind:src="'https://www.youtube.com/embed/'+ video.id + '?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=http://youtubeembedcode.com'"></iframe>
+              <button type="button" class="del-btn btn btn-outline-danger" v-on:click="delVideo(video.id)">-</button>
             </div>
             <!--------------------------- Show own VideoLists ---------------------------------->
             <div v-if="showOwnVideoLists" v-for="videolist in videolists">
