--- a/server/static/index.html
+++ b/server/static/index.html
@@ -455,6 +455,7 @@
                 </div>
                 <div v-if="showVideoInOwnVideoList === true && selectedVideoListId === videolist.id" v-for="video in videoInVideoLists">
                   <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" allow="fullscreen" v-bind:src="'https://www.youtube.com/embed/'+ video.videoId + '?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=http://youtubeembedcode.com'"></iframe>
+                  <button type="button" class="del-btn btn btn-outline-danger" v-on:click="delVideoInVideoList(videolist.id, video.videoId)">-</button>
                 </div>
                 <div v-if="showVideoInOwnVideoListFail === true && selectedVideoListId === videolist.id" class="alert alert-danger" role="alert">
                   There is no video in this videolist
